PCは実装完了

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #0e1116;
-  color: #52a44e;
+  color: #fff;
 }
